force-app/main/default/objects/Sandbox_Refresh_Config__c/Sandbox_Refresh_Config__c.object-meta.xml
<CustomObject>
    <label>Sandbox Refresh Config (Task)</label>
    <nameField>
        <label>Object(ive) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sandbox Refresh Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>