force-app/main/default/objects/Sandbox_Refresh_Config__c/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <label>BatchSize</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>