force-app/main/default/objects/Sandbox_Refresh_Config__c/fields/EmailFields__c.field-meta.xml
<CustomField>
    <fullName>EmailFields__c</fullName>
    <label>Fields (CSV)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>