force-app/main/default/objects/Sandbox_Refresh_Config__c/fields/ErrorDetails__c.field-meta.xml
<CustomField>
    <fullName>ErrorDetails__c</fullName>
    <label>Error Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>