force-app/main/default/objects/Sandbox_Refresh_Config__c/fields/isInitiatedManually__c.field-meta.xml
<CustomField>
    <fullName>isInitiatedManually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Initiated Manually?</label>
    <type>Checkbox</type>
</CustomField>