force-app/main/default/objects/Sandbox_Refresh_Config__c/fields/LastBatchExecutedOn__c.field-meta.xml
<CustomField>
    <fullName>LastBatchExecutedOn__c</fullName>
    <label>Last Batch Executed On</label>
    <type>DateTime</type>
</CustomField>