force-app/main/default/objects/Sandbox_Refresh_Config__c/fields/LastFailedRecordCount__c.field-meta.xml
<CustomField>
    <fullName>LastFailedRecordCount__c</fullName>
    <label>No of records failed in last batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>