force-app/main/default/objects/Sandbox_Refresh_Config__c/fields/NoOfRecords__c.field-meta.xml
<CustomField>
    <fullName>NoOfRecords__c</fullName>
    <label>No of records processed in last batch</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>