force-app/main/default/objects/Sandbox_Refresh_Config__c/fields/ObjectCode__c.field-meta.xml
<CustomField>
    <fullName>ObjectCode__c</fullName>
    <label>Object Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>