force-app/main/default/objects/Sandbox_Refresh_Config__c/fields/ObjectLabel__c.field-meta.xml
<CustomField>
    <fullName>ObjectLabel__c</fullName>
    <label>Object Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>