force-app/main/default/objects/Sandbox_Refresh_Config__c/fields/ParentTask__c.field-meta.xml
<CustomField>
    <fullName>ParentTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Task</label>
    <referenceTo>Sandbox_Refresh_Config__c</referenceTo>
    <relationshipLabel>Sandbox Refresh Tasks</relationshipLabel>
    <relationshipName>ParentTasks</relationshipName>
    <type>Lookup</type>
</CustomField>