force-app/main/default/objects/Sandbox_Refresh_Config__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email Mask</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>