force-app/main/default/objects/Sandbox_Refresh_Config__c/listViews/AllCompletedTasks.listView-meta.xml
<ListView>
    <fullName>AllCompletedTasks</fullName>
    <columns>Execution_Order__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Object__c</columns>
    <columns>isInitiatedManually__c</columns>
    <columns>LastBatchExecutedOn__c</columns>
    <columns>Type__c</columns>
    <columns>BatchSize__c</columns>
    <columns>NoOfRecords__c</columns>
    <columns>LastFailedRecordCount__c</columns>
    <columns>ErrorDetails__c</columns>
    <columns>Description__c</columns>
    <columns>Notes__c</columns>
    <columns>ProcessType__c</columns>
    <columns>ParentTask__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Tasks</label>
</ListView>