force-app/main/default/objects/Sandbox_Refresh_Config__c/listViews/Configurations.listView-meta.xml
<ListView>
    <fullName>Configurations</fullName>
    <columns>Execution_Order__c</columns>
    <columns>ProcessType__c</columns>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>isInitiatedManually__c</columns>
    <columns>EmailFields__c</columns>
    <columns>Notes__c</columns>
    <columns>ParentTask__c</columns>
    <columns>LastBatchExecutedOn__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Configuration</value>
    </filters>
    <label>Configurations</label>
</ListView>