force-app/main/default/objects/Sandbox_Refresh_Config__c/listViews/ManualSteps.listView-meta.xml
<ListView>
    <fullName>ManualSteps</fullName>
    <columns>Type__c</columns>
    <columns>Execution_Order__c</columns>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>Description__c</columns>
    <columns>isInitiatedManually__c</columns>
    <columns>Status__c</columns>
    <columns>ErrorDetails__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProcessType__c</field>
        <operation>equals</operation>
        <value>Manual Changes</value>
    </filters>
    <label>Manual Steps</label>
</ListView>