force-app/main/default/objects/Sandbox_Refresh_Config__c/listViews/Pending.listView-meta.xml
<ListView>
    <fullName>Pending</fullName>
    <columns>Execution_Order__c</columns>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>isInitiatedManually__c</columns>
    <columns>BatchSize__c</columns>
    <columns>NoOfRecords__c</columns>
    <columns>LastFailedRecordCount__c</columns>
    <columns>Status__c</columns>
    <columns>LastBatchExecutedOn__c</columns>
    <columns>ErrorDetails__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
        <value>Configuration</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>Email Masking Pending</label>
</ListView>